# numerical_methods_2024

./: README.md
lab01/: CMakeLists.txt  Exp.h  TestExp.cpp  expf.cpp  main.cpp
lab02/: CMakeLists.txt  Consts.h  Exp.h  TestExp.cpp
lab03/: CMakeLists.txt  Consts.h  Exp.h  Exp_Chebyshev.h  TestExp.cpp
lab04/: CMakeLists.txt  Consts.h  Exp.h  TestExp.cpp
lab05/: AAD22.h  CMakeLists.txt  Differentiator.h  TestDifferentiator.cpp
lab06/: CMakeLists.txt  Consts.h  PG.h  SAM.h  TestPG.cpp  TestSam.cpp
lab07/: CMakeLists.txt  Consts.h  Observer.h  Over-all integrator.h  PG.h  RHS.h  SAM.h  TestODESolver.cpp  TimeStepperRKF45.h
lab08/: Consts.h  Everhart.h  SatelliteEq.h  TestSatellite.cpp
